--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Ibrahim MOhamady Website</h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <title>MyWebsite</title>
+  </head>
+  <body>
+
+  </body>
+</html>
